header and footer dont need overflow (IE fix when selecting)

--- a/lizard_ui/static/bootstrap/less/bootstrap.css
+++ b/lizard_ui/static/bootstrap/less/bootstrap.css
@@ -4924,6 +4924,10 @@ html,
 body {
   overflow: hidden;
 }
+header,
+#footer {
+  overflow: hidden;
+}
 #logo-row {
   overflow: visible;
   margin-bottom: 18px;
